Snapshot of code demonstration

--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -98,114 +98,24 @@ print('The optimised hnu - Phi=' + f'{bmap.hnuminphi:.4f}' + ' +/- '
 ```{python}
 # %matplotlib inline
 
-angle_min = 0.1
-angle_max = 1e6
-en_val = 0
-energy_range = [-0.3, 0.05]
-
-mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_value=en_val))
-
-fig = plt.figure(figsize=(6, 5))
-ax = fig.gca()
-
-fig = mdcs.plot(ax=ax)
-
-# Subsequent plot customization
-# ax.set_xlim([2, 10]); # ax.set_ylim([0, 10000])
-
-# change = xarpes.SpectralLinear(amplitude=500, peak=7.5, broadening=0.01,
-#                                name='Linear_test', index='1')
-
-# change.broadening = 0.02
-# print(change.broadening)
-```
-
-```{python}
-# %matplotlib inline
-
-angle_min = 0
-angle_max = 1e6
-en_val = 0
-
-mdc = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_value=en_val))
-new_range = mdc.angles
-
-line1 = xarpes.SpectralLinear(amplitude=500, peak=7.5, broadening=0.01,
-                              name='Linear test', index='1')
-line2 = xarpes.SpectralLinear(amplitude=600, peak=5.5, broadening=0.02,
-                              name='Linear test', index='2')
-
-fig = plt.figure(figsize=(7, 5))
-ax = fig.gca()
-
-line1.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False,
-           fig_close=False)
-line2.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False,
-           fig_close=False)
-fig = mdc.plot(ax=ax)
-```
-
-```{python}
-# %matplotlib inline
-
-fig = plt.figure(figsize=(8, 6))
-ax = fig.gca()
-
-guess_dists = xarpes.CreateDistributions([
-xarpes.Linear(offset=3.0e3, slope=-100),
-xarpes.SpectralLinear(amplitude=450, peak=7.4, broadening=0.012,
-                      name='Linear_test', index='1'),
-xarpes.SpectralQuadratic(amplitude=20, peak=4.5, center_wavevector=0,
-                            broadening=0.005, name='Quadratic_test', index='1')
-])
-
-fig = mdc.visualize_guess(distributions=guess_dists, ax=ax, show=True)
-```
-
-```{python}
-# %matplotlib inline
-
-fig = plt.figure(figsize=(8, 6))
-ax = fig.gca()
-
-fig, new_distributions, covariance_matrix = mdc.fit(
-     distributions=guess_dists, ax=ax, show=True)
-```
-
-```{python}
 angle_min = 0
 angle_max = 1e6
 
-energy_range = [-0.1, 0.01]
+energy_range = [-0.25, 0.01]
+energy_value = 0
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
 
 guess_dists = xarpes.CreateDistributions([
 xarpes.Linear(offset=3.0e3, slope=-100),
-xarpes.SpectralLinear(amplitude=450, peak=7.4, broadening=0.012,
-                      name='Linear_test', index='1'),
-# xarpes.SpectralQuadratic(amplitude=20, peak=5.5, center_wavevector=0,
-#    broadening=0.005, name='Quadratic_test', index='1')
+xarpes.SpectralLinear(amplitude=420, peak=7.3, broadening=0.012,
+                      name='Linear_test', index='1')
 ])
-```
-
-```{python}
-# %matplotlib inline
 
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
-fig = mdcs.visualize_guess(distributions=guess_dists, energy_value=0, ax=ax)
-```
-
-```{python}
-# %matplotlib inline
-
-fig = plt.figure(figsize=(8, 6))
-ax = fig.gca()
-
-fig, new_distributions, covariance_matrix = mdcs.fit(
-     distributions=guess_dists, energy_value=0.001, ax=ax)
+fig = mdcs.visualize_guess(distributions=guess_dists, energy_value=energy_value, ax=ax)
 ```
 
 ```{python}
@@ -213,9 +123,6 @@ fig, new_distributions, covariance_matrix = mdcs.fit(
 
 fig = plt.figure(figsize=(7, 5))
 ax = fig.gca()
-
-energy_range = [-0.25, 0.01]
-energy_value = 0.01
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
 
@@ -227,22 +134,6 @@ fig = mdcs.fit_selection(distributions=guess_dists, ax=ax)
 
 self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Linear_test_1',
                                 fermi_velocity=2.85, fermi_wavevector=0.358))
-```
-
-```{python}
-fig = plt.figure(figsize=(7, 5))
-ax = fig.gca()
-
-from xarpes.constants import stdv
-
-# ax.scatter(self_energy.enel_range, self_energy.real, label =r"$\Sigma'(E)$")
-ax.errorbar(self_energy.enel_range, self_energy.imag, 
-            yerr=stdv * self_energy.imag_sigma, label =r"$-\Sigma''(E)$")
-ax.errorbar(self_energy.enel_range, self_energy.real, 
-            yerr=stdv * self_energy.real_sigma, label =r"$\Sigma'(E)$")
-ax.set_xlabel(r'$E-\mu$ (eV)'); ax.set_ylabel(r"$\Sigma'(E), -\Sigma''(E)$ (eV)")
-
-plt.legend(); plt.show()
 ```
 
 ```{python}
@@ -258,6 +149,21 @@ ax.errorbar(self_energy.peak_positions, self_energy.enel_range,
            markersize=2, color='tab:blue', label=self_energy.label)
 
 fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax)
+```
+
+```{python}
+fig = plt.figure(figsize=(7, 5))
+ax = fig.gca()
+
+from xarpes.constants import stdv
+
+ax.errorbar(self_energy.enel_range, self_energy.imag, 
+            yerr=stdv * self_energy.imag_sigma, label =r"$-\Sigma''(E)$")
+ax.errorbar(self_energy.enel_range, self_energy.real, 
+            yerr=stdv * self_energy.real_sigma, label =r"$\Sigma'(E)$")
+ax.set_xlabel(r'$E-\mu$ (eV)'); ax.set_ylabel(r"$\Sigma'(E), -\Sigma''(E)$ (eV)")
+
+plt.legend(); plt.show()
 ```
 
 ```{python}
@@ -284,10 +190,8 @@ fig = mdc2.visualize_guess(distributions=guess_dists2, energy_value=0, ax=ax)
 # Fit without showing output
 
 fig = mdc2.fit_selection(distributions=guess_dists2, show=False, fig_close=True)
-```
 
-```{python}
-self_left = xarpes.SelfEnergy(*mdc2.expose_parameters(select_label='Linear_left_1', fermi_wavevector=0.1))
+self_left = xarpes.SelfEnergy(*mdc2.expose_parameters(select_label='Linear_left_1'))
 ```
 
 ```{python}
@@ -307,6 +211,162 @@ ax.errorbar(self_energy.peak_positions, self_energy.enel_range,
            markersize=2, color='tab:blue', label=self_energy.label)
 
 fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax)
+```
+
+```{python}
+
+```
+
+```{python}
+
+```
+
+```{python}
+
+```
+
+```{python}
+
+```
+
+```{python}
+
+```
+
+```{python}
+
+```
+
+```{python}
+# # %matplotlib inline
+
+# fig = plt.figure(figsize=(8, 5))
+# ax = fig.gca()
+
+# from xarpes.constants import stdv
+
+# ax.errorbar(self_energy.peak_positions, self_energy.enel_range, 
+#             xerr=stdv * self_energy.peak_positions_sigma,
+#            markersize=2, color='tab:blue', label=self_energy.label)
+
+# fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax)
+```
+
+```{python}
+# # %matplotlib inline
+
+# angle_min2 = -1e6
+# angle_max2 = 0
+
+# mdc2 = xarpes.MDCs(*bmap.mdc_set(angle_min2, angle_max2, energy_range=energy_range))
+
+# guess_dists2 = xarpes.CreateDistributions([
+# xarpes.Linear(offset=2.0e3, slope=100),
+# xarpes.SpectralLinear(amplitude=450, peak=-7.25, broadening=0.01,
+#                       name='Linear_left', index='1'),
+# ])
+
+# fig = plt.figure(figsize=(8, 6))
+# ax = fig.gca()
+
+# fig = mdc2.visualize_guess(distributions=guess_dists2, energy_value=0, ax=ax)
+```
+
+```{python}
+# angle_min = 0
+# angle_max = 1e6
+
+# energy_range = [-0.1, 0.01]
+
+# mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
+
+# guess_dists = xarpes.CreateDistributions([
+# xarpes.Linear(offset=3.0e3, slope=-100),
+# xarpes.SpectralLinear(amplitude=450, peak=7.4, broadening=0.012,
+#                       name='Linear_test', index='1'),
+# # xarpes.SpectralQuadratic(amplitude=20, peak=5.5, center_wavevector=0,
+# #    broadening=0.005, name='Quadratic_test', index='1')
+# ])
+```
+
+```{python}
+# # %matplotlib inline
+
+# fig = plt.figure(figsize=(8, 6))
+# ax = fig.gca()
+
+# fig, new_distributions, covariance_matrix = mdc.fit(
+#      distributions=guess_dists, ax=ax, show=True)
+```
+
+```{python}
+
+
+# # %matplotlib inline
+
+# fig = plt.figure(figsize=(8, 6)); ax = fig.gca()
+
+# guess_dists = xarpes.CreateDistributions([
+# xarpes.Linear(offset=3.0e3, slope=-100),
+# xarpes.SpectralLinear(amplitude=450, peak=7.4, broadening=0.012,
+#                       name='Linear_test', index='1'),
+# xarpes.SpectralQuadratic(amplitude=20, peak=4.5, center_wavevector=0,
+#                             broadening=0.005, name='Quadratic_test', index='1')
+# ])
+
+# fig = mdc.visualize_guess(distributions=guess_dists, ax=ax, show=True)
+```
+
+```{python}
+# # %matplotlib inline
+
+# angle_min = 0
+# angle_max = 1e6
+# en_val = 0
+
+# mdc = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_value=en_val))
+# new_range = mdc.angles
+
+# line1 = xarpes.SpectralLinear(amplitude=500, peak=7.5, broadening=0.01,
+#                               name='Linear test', index='1')
+# line2 = xarpes.SpectralLinear(amplitude=600, peak=5.5, broadening=0.02,
+#                               name='Linear test', index='2')
+
+# fig = plt.figure(figsize=(7, 5))
+# ax = fig.gca()
+
+# line1.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False,
+#            fig_close=False)
+# line2.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False,
+#            fig_close=False)
+# fig = mdc.plot(ax=ax)
+```
+
+```{python}
+
+
+# # %matplotlib inline
+
+# angle_min = 0.1
+# angle_max = 1e6
+# en_val = 0
+# energy_range = [-0.3, 0.05]
+
+# mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_value=en_val))
+
+# fig = plt.figure(figsize=(6, 5))
+# ax = fig.gca()
+
+# fig = mdcs.plot(ax=ax)
+
+# # Subsequent plot customization
+# # ax.set_xlim([2, 10]); # ax.set_ylim([0, 10000])
+
+# # change = xarpes.SpectralLinear(amplitude=500, peak=7.5, broadening=0.01,
+# #                                name='Linear_test', index='1')
+
+# # change.broadening = 0.02
+# # print(change.broadening)
 ```
 
 ```{python}
@@ -351,8 +411,4 @@ fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax)
 # ax = fig.gca()
 
 # fig = mdcs.plot(distributions=guess_dists, ax=ax, energy_value=-0.003)
-```
-
-```{python}
-
 ```
