--- a/examples/srtio3/srtio3.Rmd
+++ b/examples/srtio3/srtio3.Rmd
@@ -113,7 +113,7 @@ fig = mdcs.fit_selection(distributions=guess_dists, matrix_element=mat_el,
 
 ```{python}
 self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Inner_band_1', 
-                                bare_mass=0.6, fermi_wavevector=0.14, side='right'))
+                                bare_mass=0.6, fermi_wavevector=0.142, side='right'))
 
 self_two = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Outer_band_2',
                                 bare_mass=0.6, fermi_wavevector=0.207))
@@ -140,10 +140,6 @@ ax.set_xlabel(r'$E-\mu$ (eV)'); ax.set_ylabel(r"$\Sigma'(E), -\Sigma''(E)$ (eV)"
 ax.set_ylim([0, 0.06])
 
 plt.legend(); plt.show()
-```
-
-```{python}
-
 ```
 
 ```{python}
@@ -451,12 +447,15 @@ fig = mdcs.fit_selection(distributions=new_dists, matrix_element=mat_el,
 
 # fig = mdcs.fit_selection(distributions=guess_dists, matrix_element=mat_el, 
 #                          matrix_args=mat_args, ax=ax)
+
+
 ```
 
-For quadratic bands, the user has to explicitly assign the peaks as left-hand or right-hand side.
-In theory, one could incorporate such information in a minus sign of the peak position.
-However, this would also require setting boundaries for the fitting range.
-Instead, the user is advised to carefully check correspondence of peak maxima with MDC fitting results.
+##### Notes for quadratic bands
+- The user has to explicitly assign the peaks as left-hand or right-hand side.  
+- In theory, one could incorporate such information in a minus sign of the peak position.  
+- However, this would also require setting boundaries for the fitting range.  
+- Instead, the user is advised to carefully check correspondence of peak maxima with MDC fitting results.
 
 ```{python}
 self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Inner_band_1', side='right'))
