--- a/examples/srtio3/srtio3.Rmd
+++ b/examples/srtio3/srtio3.Rmd
@@ -5,9 +5,9 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.17.3
+      jupytext_version: 1.15.2
   kernelspec:
-    display_name: 3.7_env
+    display_name: Python 3 (ipykernel)
     language: python
     name: python3
 ---
@@ -138,7 +138,8 @@ self_energies = xarpes.CreateSelfEnergies([self_energy, self_two])
 fig = plt.figure(figsize=(8, 5))
 ax = fig.gca()
 
-fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', self_energies=self_energies, ax=ax)
+fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', 
+                self_energies=self_energies, ax=ax)
 ```
 
 ```{python}
