--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -32,7 +32,7 @@ import os
 xarpes.plot_settings('default')
 
 # If needed, close figures before running other cells, if figures show up in the wrong places.
-# get_ipython().events.register('pre_run_cell', lambda info: plt.close('all'))
+get_ipython().events.register('pre_run_cell', lambda info: plt.close('all'))
 ```
 
 ```{python}
@@ -141,6 +141,8 @@ fig = mdcs.fit_selection(distributions=guess_dists, ax=ax)
 ```{python}
 # %matplotlib inline
 
+plt.rcParams['lines.markersize'] = 0.8
+
 fig = plt.figure(figsize=(8, 5))
 ax = fig.gca()
 
@@ -150,7 +152,7 @@ self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Linear_tes
 self_energies = xarpes.CreateSelfEnergies([self_energy])
 
 fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax,
-                self_energies=self_energies, markersize=1.0)
+                self_energies=self_energies)
 ```
 
 ```{python}
@@ -166,6 +168,8 @@ fig = self_energy.plot_real(ax=ax)
 
 angle_min2 = -1e6
 angle_max2 = 0
+
+plt.rcParams['lines.markersize'] = 3.0
 
 mdc2 = xarpes.MDCs(*bmap.mdc_set(angle_min2, angle_max2, energy_range=energy_range))
 
@@ -198,8 +202,8 @@ self_energies= xarpes.CreateSelfEnergies([
     self_energy, self_left])
 
 fig = bmap.plot(abscissa='momentum', ordinate='electron_energy',
-                self_energies=self_energies, ax=ax,
-                plot_dispersions=True, markersize=1.0)
+                self_energies=self_energies, plot_dispersions='full',
+                ax=ax)
 ```
 
 ```{python}
