--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -64,9 +64,9 @@ fig = bmap.plot(abscissa='momentum', ordinate='kinetic_energy', ax=ax)
 
 # import numpy as np
 
-# intensities= np.load(os.path.join(dfld, "graphene_152_intensities.npy"))
-# angles = np.load(os.path.join(dfld, "graphene_152_angles.npy"))
-# ekin = np.load(os.path.join(dfld, "graphene_152_ekin.npy"))
+# intensities= np.load(os.path.join(script_dir, dfld, "graphene_152_intensities.npy"))
+# angles = np.load(os.path.join(script_dir, dfld, "graphene_152_angles.npy"))
+# ekin = np.load(os.path.join(script_dir, dfld, "graphene_152_ekin.npy"))
 
 # bmap = xarpes.BandMap.from_np_arrays(intensities, angles, ekin, 
 #         energy_resolution=0.01, angle_resolution=0.1, temperature=50)
@@ -86,7 +86,7 @@ fig, ax = plt.subplots(2, 1, figsize=(6, 8))
 bmap.correct_fermi_edge(
       hnuminPhi_guess=32, background_guess=1e2,
       integrated_weight_guess=1e3, angle_min=-10, angle_max=10,
-      ekin_min=31.96, ekin_max=32.1, true_angle=0,
+      ekin_min=31.96, ekin_max=32.08, true_angle=0.0,
       ax=ax[0], show=False, fig_close=False)
 
 bmap.plot(ordinate='electron_energy', abscissa='momentum',
@@ -107,12 +107,11 @@ print('The optimised hnu - Phi=' + f'{bmap.hnuminPhi:.4f}' + ' +/- '
 ```{python}
 # %matplotlib inline
 
-fig = plt.figure(figsize=(6, 5))
-ax = fig.gca()
+fig = plt.figure(figsize=(6, 5)); ax = fig.gca()
 
 fig = bmap.fit_fermi_edge(hnuminPhi_guess=32, background_guess=1e5,
                           integrated_weight_guess=1.5e6, angle_min=-10,
-                          angle_max=10, ekin_min=31.96, ekin_max=32.1,
+                          angle_max=10, ekin_min=31.96, ekin_max=32.08,
                           ax=ax, show=True, fig_close=True, title='Fermi edge fit')
 
 print('The optimised hnu - Phi=' + f'{bmap.hnuminPhi:.4f}' + ' +/- '
@@ -122,24 +121,37 @@ print('The optimised hnu - Phi=' + f'{bmap.hnuminPhi:.4f}' + ' +/- '
 ```{python}
 # %matplotlib inline
 
-angle_min = 0
-angle_max = 1e6
+angle_min = -11.5
+angle_max = 11.5
 
-energy_range = [-0.25, 0.01]
-energy_value = 0
+energy_range = [-0.246, 0.01]
+energy_value = 0.0
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
 
 guess_dists = xarpes.CreateDistributions([
 xarpes.Linear(offset=3.0e3, slope=-100),
-xarpes.SpectralLinear(amplitude=420, peak=7.3, broadening=0.012,
-                      name='Linear_test', index='1')
+xarpes.SpectralLinear(amplitude=1.5e3, peak=-6.9, broadening=0.015,
+                      name='Linear_left', index='1'),
+xarpes.SpectralLinear(amplitude=1.3e3, peak=7.1, broadening=0.015,
+                      name='Linear_right', index='2')
 ])
 
-fig = plt.figure(figsize=(8, 6))
-ax = fig.gca()
+k_diff = -0.13
 
-fig = mdcs.visualize_guess(distributions=guess_dists, energy_value=energy_value, ax=ax)
+import numpy as np
+
+# Eq. S13 of the supplemental information.
+# Currently E_kin cannot be supplied as an argument, so it is fixed to hnuminPhi
+mat_el = lambda x: (1 + k_diff / np.sqrt(k_diff ** 2 + bmap.hnuminPhi *
+                        np.sin(np.deg2rad(x)) ** 2 / xarpes.PREF))
+
+mat_args = {}
+
+fig = plt.figure(figsize=(8, 6)); ax = fig.gca()
+
+fig = mdcs.visualize_guess(distributions=guess_dists, energy_value=energy_value, 
+                           matrix_element=mat_el, matrix_args=mat_args, ax=ax)
 ```
 
 **Note on interactive figures**
@@ -155,7 +167,8 @@ ax = fig.gca()
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
 
-fig = mdcs.fit_selection(distributions=guess_dists, ax=ax)
+fig = mdcs.fit_selection(distributions=guess_dists, 
+                         matrix_element=mat_el, matrix_args=mat_args, ax=ax)
 ```
 
 ```{python}
@@ -166,8 +179,8 @@ plt.rcParams['lines.markersize'] = 0.8
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
-self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Linear_test_1',
-                                fermi_velocity=2.85, fermi_wavevector=0.358))
+self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Linear_right_2',
+                                fermi_velocity=2.851291959, fermi_wavevector=0.357807))
 
 self_energies = xarpes.CreateSelfEnergies([self_energy])
 
@@ -178,13 +191,78 @@ fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax,
 ```{python}
 # %matplotlib inline
 
-xarpes.parameter_settings(new_sigma=4)
+spectrum, model = self_energy.extract_a2f(
+        omega_min=0.5, omega_max=250, omega_num=250, omega_I=50, omega_M=200,
+        omega_S=1, alpha_min=1.0, alpha_max=9.0, alpha_num=10, method="chi2kink", 
+        parts="both", ecut_left=0.0, ecut_right=None, t_criterion=1e-8, 
+        sigma_svd=1e-4, iter_max=1e4, lambda_el=0.0, W=1500, h_n=0.1062861,
+        impurity_magnitude=120.94606, power=4, f_chi_squared=None,
+)
 
-fig = plt.figure(figsize=(7, 5)); ax = fig.gca()
+plt.figure(figsize=(9, 5))
+plt.xlim([0, 250]); plt.ylim([0, 0.5])
+plt.xlabel(r'$\omega$ (meV)')
+plt.ylabel(r'$\alpha^2F_n(\omega)~(-)$')
+plt.plot(model); plt.plot(spectrum)
+plt.show()
 
-fig = self_energy.plot_real(ax=ax)
+print(max(spectrum))
+```
 
-xarpes.parameter_settings(new_sigma=2)
+```{python}
+cost, spectrum, model, alpha_select, params = self_energy.bayesian_loop(omega_min=0.5,
+            omega_max=250, omega_num=250, omega_I=50, omega_M=200, omega_S=1.0,
+            W=1500, power=4, fermi_velocity=2.8590436, fermi_wavevector=0.358010499,
+            h_n=0.0802309738, impurity_magnitude=120.902261, lambda_el=0,
+             vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "fermi_velocity", "h_n"), 
+            converge_iters=10, tole=1e-2, scale_vF=1.0, scale_imp=1.0, scale_kF=0.1, 
+            scale_lambda_el=1.0, scale_hn=10.0)
+
+# Add one example where instead, variables are used to update defaults
+# se.extract_a2f(..., mem={"omega_S": 2.0, "h_n": 0.12})
+```
+
+```{python}
+# Optimised parameters:
+#   fermi_velocity = 2.8551771220199167
+#   fermi_wavevector = 0.3579972425409562
+#   h_n = 0.13705853207396188
+#   impurity_magnitude = 120.90008381886433
+#   lambda_el = 1.605219872448565e-07
+
+print(params); print(cost)
+
+plt.figure(figsize=(9, 5))
+plt.xlim([0, 250]); plt.ylim([0, 0.5])
+plt.xlabel(r'$\omega$ (meV)')
+plt.ylabel(r'$\alpha^2F_n(\omega)~(-)$')
+plt.plot(spectrum[::-1])
+plt.show()
+```
+
+```{python}
+temperature = 10
+k_BT = xarpes.K_B * temperature * xarpes.KILO
+enel_range = np.linspace(-80, 0, 100)
+lambda_el = 0.1132858
+W = 150
+power = 4
+
+re, im = xarpes.SelfEnergy._el_el_self_energy(
+    enel_range=enel_range,
+    k_BT=k_BT,
+    lambda_el=lambda_el,
+    W=W,
+    power=power)
+
+plt.figure(figsize=(6, 5))
+plt.xlabel(r'$E-\mu$ meV')
+plt.ylabel(r"$\Sigma', -\Sigma''$ (meV)")
+plt.plot(enel_range, re, label='real pt')
+plt.plot(enel_range,im, label='-imag pt')
+plt.legend()
+plt.show()
+
 ```
 
 ```{python}
@@ -215,6 +293,17 @@ fig = mdc2.fit_selection(distributions=guess_dists2, show=False, fig_close=True)
 
 self_left = xarpes.SelfEnergy(*mdc2.expose_parameters(select_label='Linear_left_1',
 fermi_velocity=-2.67, fermi_wavevector=-0.354))
+```
+
+```{python}
+spectrum, model = self_energy.extract_a2f(omega_min=0.5, omega_max=250, omega_num=250, omega_I=50,
+                                omega_M=200, omega_S=1, h_n=0.12, alpha_min=1.0,
+                                alpha_max=9.0, alpha_num=8, method='chi2kink',
+                                impurity_scattering=124.73815)
+```
+
+```{python}
+
 ```
 
 ```{python}
@@ -263,4 +352,8 @@ labels = [
 
 ax.legend([left_real, left_imag, right_real, right_imag], labels)
 plt.show()
+```
+
+```{python}
+
 ```
