--- a/examples/srtio3/srtio3.Rmd
+++ b/examples/srtio3/srtio3.Rmd
@@ -141,7 +141,7 @@ fig = mdcs.fit_selection(distributions=guess_dists, matrix_element=mat_el,
 
 ```{python}
 self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Inner_band_1', 
-                                bare_mass=0.6, fermi_wavevector=0.142, side='right'))
+                                bare_mass=0.58997502, fermi_wavevector=0.1411192, side='right'))
 
 self_two = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Outer_band_2',
                                 bare_mass=0.6, fermi_wavevector=0.207))
@@ -225,4 +225,105 @@ self_total = xarpes.CreateSelfEnergies([
 
 fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax, 
                 self_energies=self_total, plot_dispersions='domain')
+```
+
+```{python}
+# %matplotlib inline
+
+guess_dists = xarpes.CreateDistributions([
+xarpes.Constant(offset=600),
+xarpes.SpectralQuadratic(amplitude=3600, peak=-2.45, broadening=0.00024,
+            center_wavevector=k_0, name='Inner_left', index='5'),
+xarpes.SpectralQuadratic(amplitude=1800, peak=-3.6, broadening=0.0004,
+            center_wavevector=k_0, name='Outer_left', index='6')
+])
+
+mat_el = lambda x: np.sin(np.deg2rad(x - theta_0)) ** 2
+
+mat_args = {}
+
+energy_range = [-0.1, 0.003]
+angle_min=-5.0
+angle_max=0.0
+
+
+mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
+
+fig = plt.figure(figsize=(7, 5)); ax = fig.gca()
+
+fig = mdcs.visualize_guess(distributions=guess_dists, matrix_element=mat_el,
+                           matrix_args=mat_args, energy_value=0.000, ax=ax)
+```
+
+```{python}
+# %matplotlib widget    
+
+fig = plt.figure(figsize=(8, 6)); ax = fig.gca()
+
+fig = mdcs.fit_selection(distributions=guess_dists, matrix_element=mat_el, 
+                         matrix_args=mat_args, ax=ax)
+```
+
+```{python}
+self_five = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Inner_left_5',
+                                bare_mass=0.59521794, fermi_wavevector=0.141069758, side='left'))
+
+self_six = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Outer_left_6', 
+                                bare_mass=0.58997502, fermi_wavevector=0.1411192, side='left'))
+
+self_five.plot_both()
+```
+
+```{python}
+# %matplotlib inline
+
+spectrum, model = self_energy.extract_a2f(omega_min=0.5, omega_max=120, omega_num=250, omega_I=20,
+                                omega_M=100, omega_S=1.0, alpha_min=0.0,
+                                alpha_max=8.0, alpha_num=10, parts='both',
+                                ecut_left=3.0, h_n=0.0741008, impurity_magnitude=16.475007)
+
+spectrum_left, _, = self_five.extract_a2f(omega_min=0.5, omega_max=120, omega_num=250, omega_I=20,
+                                omega_M=100, omega_S=1.0, alpha_min=0.0,
+                                alpha_max=8.0, alpha_num=10, parts='both',
+                                ecut_left=3.0, h_n=0.0743720, impurity_magnitude=15.882396)
+
+omega_range = np.linspace(0.5, 120, 250)
+plt.figure(figsize=(7, 4))
+plt.xlim([-120, 0]); plt.ylim([0, 0.6])
+plt.xlabel(r'$\omega$ (meV)'); plt.ylabel(r'$\alpha^2F_n(\omega)~(-)$')
+plt.plot(-omega_range, model, color='darkgoldenrod', linestyle='-.')
+plt.plot(-omega_range, spectrum, color='tab:blue', linewidth=2, label='Inner right', zorder=10)
+plt.plot(-omega_range, spectrum_left, color='tab:red', linewidth=2, label='Inner left')
+plt.legend(); plt.show()
+```
+
+```{python}
+cost, spectrum, model, alpha_select, params = self_energy.bayesian_loop(omega_min=0.5,
+            omega_max=120, omega_num=250, omega_I=20, omega_M=100, omega_S=1.0,
+            alpha_min=0.0, alpha_max=8.0, alpha_num=10, method='chi2kink',
+            parts='both', ecut_left=3, iter_max=1e4, t_criterion=1e-8,
+            power=4, bare_mass = 0.5939648580991967, fermi_wavevector = 0.14096599149347405,
+            h_n = 0.14453652120992496, impurity_magnitude = 16.472274264782957, lambda_el = 6.40542820041109e-07,
+            vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "bare_mass", 
+                "h_n"), scale_imp=1.0, scale_lambda_el=1.0, scale_kF=0.1, scale_mb=1.0, scale_hn=1.0)
+```
+
+```{python}
+# Optimised parameters:
+#   fermi_velocity = 2.8590279150001967
+#   fermi_wavevector = 0.3580104700929503
+#   h_n = 0.13784830295580716
+#   impurity_magnitude = 120.90250207340154
+#   lambda_el = 2.4801500927868874e-08
+
+plt.figure(figsize=(9, 5))
+plt.xlim([0, 250]); plt.ylim([0, 0.5])
+# plt.xlabel(r'$\omega$ (meV)')
+plt.ylabel(r'$\alpha^2F_n(\omega)~(-)$')
+plt.plot(spectrum[::-1])
+plt.show()
+```
+
+```{python}
+
 ```
