--- a/examples/srtio3/srtio3.Rmd
+++ b/examples/srtio3/srtio3.Rmd
@@ -277,17 +277,28 @@ self_five.plot_both()
 ```{python}
 # %matplotlib inline
 
+fig, ax = plt.subplots(2, 1, figsize=(6, 8))
+
 fig, spectrum, model, omega_range, alpha_select = self_energy.extract_a2f(
                                 omega_min=0.5, omega_max=120, omega_num=250, 
                                 omega_I=20, omega_M=100, omega_S=1.0, alpha_min=0.0,
                                 alpha_max=8.0, alpha_num=10, parts='both',
-                                ecut_left=3.0, h_n=0.0741008, impurity_magnitude=16.475007)
+                                ecut_left=3.0, h_n=0.0741008, impurity_magnitude=16.475007,
+                                ax=ax[0], show=False, fig_close=False)
 
 fig, spectrum_left, model, omega_range, alpha_select = self_five.extract_a2f(
                                 omega_min=0.5, omega_max=120, omega_num=250, 
                                 omega_I=20, omega_M=100, omega_S=1.0, alpha_min=0.0,
                                 alpha_max=8.0, alpha_num=10, parts='both',
-                                ecut_left=3.0, h_n=0.0743720, impurity_magnitude=15.882396)
+                                ecut_left=3.0, h_n=0.0743720, impurity_magnitude=15.882396,
+                                ax=ax[1], show=False, fig_close=False)
+
+
+# Figure customization
+ax[0].set_xlabel(''); ax[0].set_xticklabels([])
+ax[0].set_title('$\chi^2$-kink')
+fig.subplots_adjust(top=0.92, hspace=0.1)
+plt.show()
 ```
 
 ```{python}
@@ -298,7 +309,8 @@ spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_
             power=4, bare_mass=0.6094394681, fermi_wavevector=0.1420916364, h_n=0.07582382627, 
             impurity_magnitude=14.64962434, lambda_el=2.064840668e-07,
             vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "bare_mass", 
-                "h_n"), scale_imp=1.0, scale_lambda_el=1.0, scale_kF=0.1, scale_mb=1.0, scale_hn=1.0)
+                "h_n"), scale_imp=1.0, scale_lambda_el=1.0, scale_kF=0.1, scale_mb=1.0, scale_hn=1.0,
+                print_lines=10)
 ```
 
 ```{python}
