--- a/examples/verification/verification.Rmd
+++ b/examples/verification/verification.Rmd
@@ -194,7 +194,7 @@ spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_
             h_n=0.081811739, impurity_magnitude=10.0379498, lambda_el=0.1054932517,
             vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "bare_mass", "h_n"), 
             scale_mb=0.01, scale_imp=0.1, scale_kF=0.001,
-            scale_lambda_el=0.1, scale_hn=0.1)
+            scale_lambda_el=0.1, scale_hn=0.1, print_lines=10)
 ```
 
 In the following cell, we start from a much less probable solution, showing that the code can occasionally heavily improve on the solution.
@@ -208,7 +208,7 @@ spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_
             h_n=0.09, impurity_magnitude=9.1, lambda_el=0.22, sigma_svd=0.1,
             vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "bare_mass", "h_n"), 
             converge_iters=100, tole=1e-8, scale_mb=0.1, scale_imp=1.0, scale_kF=0.001,
-            scale_lambda_el=0.1, scale_hn=0.01)
+            scale_lambda_el=0.1, scale_hn=0.01, print_lines=10)
 ```
 
 Following the recommended procedure, we perform a final optimisation with very tight criteria, for the purpose of further narrowing down the solution.
@@ -220,10 +220,10 @@ spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_
             omega_max=80, omega_num=250, omega_I=20, omega_M=60,
             alpha_min=1.0, alpha_max=9.0, sigma_svd=1e-4,
             bare_mass=1.597636093, fermi_wavevector=0.2499774208, h_n=0.08181151626, 
-            impurity_magnitude=10.03795642, lambda_el=0.1054945571
+            impurity_magnitude=10.03795642, lambda_el=0.1054945571,
             vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "bare_mass", "h_n"), 
             converge_iters=100, tole=1e-8, scale_mb=0.1, scale_imp=0.1, scale_kF=0.01,
-            scale_lambda_el=0.1, scale_hn=0.1)
+            scale_lambda_el=0.1, scale_hn=0.1, print_lines=10)
 ```
 
 ```{python}
