--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -184,9 +184,9 @@ fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax,
 ```{python}
 # %matplotlib inline
 
-fig, spectrum, model, omega_range, alpha_select = self_energy.extract_a2f(
+fig, spectrum, model, omega_range, aval_select = self_energy.extract_a2f(
         omega_min=0.5, omega_max=250, omega_num=250, omega_I=50, omega_M=200,
-        omega_S=1, alpha_min=1.0, alpha_max=9.0, alpha_num=10, method="chi2kink", 
+        omega_S=1, aval_min=1.0, aval_max=9.0, aval_num=10, method="chi2kink", 
         parts="both", ecut_left=0.0, ecut_right=None, t_criterion=1e-8, 
         sigma_svd=1e-4, iter_max=1e4, lambda_el=0.0, W=1500, h_n=0.1062861,
         impurity_magnitude=120.94606, power=4, f_chi_squared=None)
@@ -202,7 +202,7 @@ fig = self_energy.plot_spectra(ax=ax)
 
 ```{python}
 with xarpes.trim_notebook_output(print_lines=10):
-    spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_loop(omega_min=0.5,
+    spectrum, model, omega_range, aval_select, cost, params = self_energy.bayesian_loop(omega_min=0.5,
                 omega_max=250, omega_num=250, omega_I=50, omega_M=200, omega_S=1.0,
                 W=1500, power=4, fermi_velocity=2.8590436, fermi_wavevector=0.358010499,
                 h_n=0.0802309738, impurity_magnitude=120.902261, lambda_el=0,
