--- a/examples/verification/verification.Rmd
+++ b/examples/verification/verification.Rmd
@@ -128,15 +128,38 @@ fig = bmap.plot(abscissa='momentum', ordinate='kinetic_energy',
                 self_energies=self_energies, ax=ax)
 ```
 
-In the following cell, we extract the Eliashberg function from the self-energy. The result of the chi2kink fit is plotted during the extraction. Setting "show=False" and "fig_close=True" will prevent the figure from being displayed. Afterwards, the Eliashberg function and model function with the appropriate self-energy methods.
+In the following cell, we extract the Eliashberg function from the self-energy.
+The result of the chi2kink fit is plotted during the extraction. Setting
+`show=False` and `fig_close=True` will prevent the figure from being displayed.
+Afterwards, we plot the Eliashberg function and model function with the
+appropriate self-energy methods.
+
+To model the characteristic kink-like behavior observed in the dependence of
+the goodness-of-fit metric on the control parameter $x$, we employ a smooth logistic function, 
+hereafter referred to as the $\chi^2$-kink model. The fitted function is defined as
+
+$$
+\phi(x; g, b, c, d)
+=
+g + \frac{b}{1 + e^{-d(x - c)}},
+$$
+
+where $g$ denotes the asymptotic baseline value of the metric for small $x$,
+$b$ sets the amplitude of the step, $c$ determines the position of the kink
+along the $x$-axis, and $d$ controls the sharpness of the transition. In the
+limit $d \to \infty$, the function approaches a piecewise-constant form with a
+sharp crossover at $x = c$, whereas smaller values of $d$ correspond to a more
+gradual evolution.
 
 ```{python}
 # %matplotlib inline
 
-fig, spectrum, model, omega_range, alpha_select = self_energy.extract_a2f(
+fig, spectrum, model, omega_range, aval_select = self_energy.extract_a2f(
     omega_min=1.0, omega_max=80, omega_num=250, omega_I=20, omega_M=60, 
-    alpha_min=1.5, alpha_num=10, alpha_max=9.5, lambda_el=0.1132858, 
-    impurity_magnitude=10.041243, h_n=0.0803366, show=True, fig_close=False)
+    aval_min=1.5, aval_num=10, aval_max=9.5, lambda_el=0.1132858,
+    impurity_magnitude=10.041243, h_n=0.0803366,
+    g_guess=1.0, b_guess=3.0, c_guess=3.0, d_guess=1.5,
+    show=True, fig_close=False)
 
 plt.show()
 ```
@@ -189,9 +212,9 @@ In the following cell, we start from the optimal solution. Unsurprisingly, the o
 
 ```{python}
 with xarpes.trim_notebook_output(print_lines=10):
-    spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_loop(
+    spectrum, model, omega_range, aval_select, cost, params = self_energy.bayesian_loop(
             omega_min=1.0, omega_max=80, omega_num=250, omega_I=20, omega_M=60,
-            alpha_min=3.0, alpha_max=11.0, bare_mass=1.597636665,
+            aval_min=3.0, aval_max=11.0, bare_mass=1.597636665,
             fermi_wavevector=0.2499774217, h_n=0.081811739,
             impurity_magnitude=10.0379498, lambda_el=0.1054932517,
             vary=("impurity_magnitude", "lambda_el", "fermi_wavevector",
@@ -207,9 +230,9 @@ The optimisation has been tested against Python v3.10.12, NumPy v2.2.6, and SciP
 
 ```{python}
 with xarpes.trim_notebook_output(print_lines=10):
-    spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_loop(omega_min=1.0,
+    spectrum, model, omega_range, aval_select, cost, params = self_energy.bayesian_loop(omega_min=1.0,
                 omega_max=80, omega_num=250, omega_I=20, omega_M=60,
-                alpha_min=3.0, alpha_max=11.0, bare_mass=1.74625, fermi_wavevector=0.250125,
+                aval_min=3.0, aval_max=11.0, bare_mass=1.74625, fermi_wavevector=0.250125,
                 h_n=0.09, impurity_magnitude=9.1, lambda_el=0.22, sigma_svd=0.1,
                 vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "bare_mass", "h_n"), 
                 converge_iters=100, tole=1e-8, scale_mb=0.1, scale_imp=1.0, scale_kF=0.001,
@@ -222,16 +245,12 @@ With the tested combination of packages, the result is a tiny bit closer to the 
 
 ```{python}
 with xarpes.trim_notebook_output(print_lines=10):
-    spectrum, model, omega_range, alpha_select, cost, params = self_energy.bayesian_loop(omega_min=1.0,
+    spectrum, model, omega_range, aval_select, cost, params = self_energy.bayesian_loop(omega_min=1.0,
                 omega_max=80, omega_num=250, omega_I=20, omega_M=60,
-                alpha_min=1.0, alpha_max=9.0, sigma_svd=1e-4,
+                aval_min=1.0, aval_max=9.0, sigma_svd=1e-4,
                 bare_mass=1.597636093, fermi_wavevector=0.2499774208, h_n=0.08181151626, 
                 impurity_magnitude=10.03795642, lambda_el=0.1054945571,
                 vary=("impurity_magnitude", "lambda_el", "fermi_wavevector", "bare_mass", "h_n"), 
                 converge_iters=100, tole=1e-8, scale_mb=0.1, scale_imp=0.1, scale_kF=0.01,
                 scale_lambda_el=0.1, scale_hn=0.1, print_lines=10)
-```
-
-```{python}
-
 ```
